Swagger: add components issue
