# app/static/swagger.json
@@ -7,8 +7,8 @@
     "paths": {
         "/api/users/{id}": {
             "get": {
-                "summary": "Foo-Bar endpoint.",
-                "description": "Get a single foo with the bar ID.",
+                "summary": "User endpoint.",
+                "description": "Get user by ID.",
                 "security": [
                     {
                         "bearerAuth": []
@@ -25,9 +25,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Foo object to be returned.",
+                        "description": "User object to be returned.",
                         "schema": {
-                            "$ref": "#/components/schemas/UserApi"
+                            "$ref": "#/components/schemas/User"
                         },
                         "examples": {
                             "about_me": {
@@ -54,7 +54,7 @@
                         }
                     },
                     "404": {
-                        "description": "Foo not found."
+                        "description": "User not found."
                     }
                 }
             }
@@ -63,12 +63,114 @@
     "tags": [],
     "openapi": "3.0",
     "components": {
-        "securitySchemes": {
-            "bearerAuth": {
-                "type": "http",
-                "scheme": "bearer",
-                "bearerFormat": "JWT"
+        "schemas": {
+            "User": {
+                "type": "object",
+                "properties": {
+                    "id": {
+                        "type": "integer",
+                        "format": "int32"
+                    },
+                    "username": {
+                        "type": "string"
+                    },
+                    "about_me": {
+                        "type": "string"
+                    },
+                    "follower_count": {
+                        "type": "integer",
+                        "format": "int32"
+                    },
+                    "followed_count": {
+                        "type": "integer",
+                        "format": "int32"
+                    },
+                    "_links": {
+                        "$ref": "#/components/schemas/Links"
+                    },
+                    "last_seen": {
+                        "type": "string",
+                        "format": "date"
+                    },
+                    "post_count": {
+                        "type": "integer",
+                        "format": "int32"
+                    }
+                },
+                "required": [
+                    "about_me",
+                    "username"
+                ]
+            },
+            "Users": {
+                "type": "object",
+                "properties": {
+                    "_meta": {
+                        "$ref": "#/components/schemas/Meta"
+                    },
+                    "_links": {
+                        "$ref": "#/components/schemas/Links"
+                    },
+                    "items": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/User"
+                        }
+                    }
+                }
+            },
+            "Links": {
+                "type": "object",
+                "properties": {
+                    "followers": {
+                        "type": "string",
+                        "format": "url"
+                    },
+                    "avatar": {
+                        "type": "string",
+                        "format": "url"
+                    },
+                    "self": {
+                        "type": "string",
+                        "format": "url"
+                    },
+                    "followed": {
+                        "type": "string",
+                        "format": "url"
+                    }
+                }
+            },
+            "Meta": {
+                "type": "object",
+                "properties": {
+                    "total_items": {
+                        "type": "integer",
+                        "format": "int32"
+                    },
+                    "per_page": {
+                        "type": "integer",
+                        "format": "int32"
+                    },
+                    "total_pages": {
+                        "type": "integer",
+                        "format": "int32"
+                    },
+                    "page": {
+                        "type": "integer",
+                        "format": "int32"
+                    }
+                }
+            },
+            "securitySchemes": {
+                "properties": {
+                    "bearerAuth": {
+                        "type": "http",
+                        "scheme": "bearer",
+                        "bearerFormat": "JWT"
+                    }
+                }
             }
-        }
+        },
+        "parameters": {}
     }
 }
